--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
       "email": "espulefjuan12@gmail.com"
     }
   ],
+  "scripts": {
+    "build-plugin": "@php -dphar.readonly=0 build-plugin.php"
+  },
   "require-dev": {
     "pocketmine/pocketmine-mp": ">=5.37.3"
   }
